# zoho-plugin-uv

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
extn/: background.js  build-extension.sh  content.js  manifest.json  popup.html  popup.js
src/: config.py  inference.py  main.py  recreate_models.py  utils.py
src/models/: nb_classifier_category.joblib  nb_classifier_classification.joblib  rf_classifier_category.joblib  rf_classifier_classification.joblib
src/vectors/: category_encoder.joblib  classification_encoder.joblib
